kubernetes/nas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: nas.lambertlab.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nas
            port:
              number: 8181
  tls:
  - hosts:
    - nas.lambertlab.us
    secretName: lambertlab-wildcard-tls
